@startuml class_diagram
skinparam backgroundColor white
skinparam defaultFontName Arial

package "Domain.Algorithms" {
  class KDNode {
    + Point : double[]
    + Label : int
    + Left : KDNode
    + Right : KDNode
    + Axis : int
  }

  class KDTree {
    + Root : KDNode
    + Dimension : int
    + BuildTree(points, labels)
    + Insert(point, label)
    + NearestNeighbor(target)
    + KNearestNeighbors(target, k)
  }

  class KNearestNeighbors {
    + Classify(tree, featureVector, k)
    + ClassifyLinear(trainingPoints, trainingLabels, featureVector, k)
  }

  class DistanceCalculator {
    + EuclideanDistance(a, b)
  }

  KDTree *-- KDNode : содержит
  KNearestNeighbors --> KDTree : использует
  KNearestNeighbors --> DistanceCalculator : использует
}

package "Domain.Entities" {
  class ImageClass {
    + Id : int
    + Name : string
    + Description : string
  }

  class ImageRecord {
    + Id : int
    + ClassId : int
    + FilePath : string
  }

  class ImageFeatures {
    + Id : int
    + ImageId : int
    + Vector : double[]
  }

  class ModelInfo {
    + Id : int
    + Name : string
    + Dimension : int
    + DefaultK : int
  }

  class Experiment {
    + Id : int
    + ModelId : int
    + Accuracy : double
  }

  class Prediction {
    + Id : int
    + ImageId : int
    + PredictedClassId : int
    + UsedKdTree : bool
  }

  ImageClass "1" -- "N" ImageRecord
  ImageRecord "1" -- "0..1" ImageFeatures
  ModelInfo "1" -- "N" Experiment
  ModelInfo "1" -- "N" Prediction
  ImageRecord "1" -- "N" Prediction
}

package "Application" {
  interface IImagePreprocessingService {
    + ExtractFeatures(filePath) : double[]
  }

  class ImagePreprocessingService {
    + ExtractFeatures(filePath) : double[]
  }

  IImagePreprocessingService <|.. ImagePreprocessingService : implements
}

package "Infrastructure" {
  class PostgresOptions {
    + Host : string
    + Port : int
    + Database : string
  }

  class PostgresConnectionFactory {
    + CreateOpenConnection() : NpgsqlConnection
  }

  PostgresConnectionFactory --> PostgresOptions : использует
}

@enduml
